style (banner-demo): allow break word overflow wrap in hit text to prevent overflow

--- a/banner-demo/src/app.css
+++ b/banner-demo/src/app.css
@@ -74,6 +74,10 @@
   text-align: center;
 }
 
+.ais-Hits-item {
+  overflow-wrap: break-word;
+}
+
 @media only screen and (max-width: 600px) {
   .ais-Hits-item {
     width: 100%;
